<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/svRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    android:importantForAutofill="noExcludeDescendants">

    <RelativeLayout
        android:id="@+id/rlRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:lines="1"
            android:autoSizeTextType="uniform"
            android:fontFamily="casual"
            android:letterSpacing="0.2"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tvGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:fontFamily="casual"
            android:textSize="@dimen/section_caption_text_size"
            android:textColor="@color/color_section_caption"
            android:text="@string/general" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGeneral"
            android:fontFamily="casual"
            android:text="@string/status" />

        <TextView
            android:id="@+id/tvStatusInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGeneral"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tvStatus"
            android:text="@string/not_running"
            android:textColor="@color/color_default_text_inactive" />

        <TextView
            android:id="@+id/tvRootFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStatus"
            android:fontFamily="casual"
            android:text="@string/root_folder" />

        <TextView
            android:id="@+id/tvRootFolderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStatus"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tvRootFolder"
            android:text="@string/app_internal_files"
            android:textColor="@color/color_default_text_inactive" />

        <Button
            android:id="@+id/btnAccessExternalStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRootFolder"
            android:layout_marginTop="10dp"
            android:maxWidth="180dp"
            android:text="@string/access_external_storage" />

        <Button
            android:id="@+id/btnStartStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAccessExternalStorage"
            android:maxWidth="180dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/btnOpenInBrowser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnStartStop"
            android:maxWidth="180dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/open_in_local_browser" />

    </RelativeLayout>
</ScrollView>